1.3.4
	+ bugfix: inospoof chain was buggy and didn't allow traffic
	  to internal eBox addresses from other internal networks
	+ bugfix: insert missing port data using NULL in logs data base
1.1.30
	+ Add all and ah protocols to redirections
1.1.20
	+ New release
1.1.10
	+ New release
1.1
	+ Added required output rules to connect remote services when the
	eBox is subscribed
	+ Use the new ids() and row() API
	+ Added support to redirects to introduce the origin destination address.
	  So far, only local address could be used.
	+ Bugfix: fix regression that didn't allow to use virtual interfaces on
	redirections
	+ Allow outgoing connections from eBox by default
0.12.101
	+ Bugfix: Add redirect migration script to Makefile.am
0.12.100
	+ New release
0.12.99
	+ Add support for reporting 
	+ Add rules to allow DHCP requests from interfaces configured via DHCP
0.12.1
	+ Add log decision to firewall rules
	+ Add conf parameter to disable NAT
0.12
	+ Use the new EBox::Model::Row api
	+ Add help field to firewall models
	+ Bugfix. Use exit and not return in dchp-firewall external script
	+ Bugfix. Use #DEBHELPER# properly to be able to flush the firewall rules
	  when the package is uninstalled
	+ Add support for ESP protocol
0.11.102
	+ Set editable attribute to 1 in Decision field. To comply with
	  what the type expects and avoid warnings
0.11.101
	+ Unroll inoexternal chain
	+ Bugfix. Do not restart firewall module if called from dhcp context
	  and the module is not enabled
	+ Add setExternalService
0.11.100
	+ Fix English string
	+ onInstall() functionality moved to migration script
0.11.99
	+ Added log domain for firewall's drops. Firewall logging limits
	are stored in a configuration file
	+ Enhanced strings
0.11
	+ New release
0.10.99
	+ Fix some typos
0.10
	+ Load ip_nat_ftp module
0.9.100
	+ Use new model/view framework which implies several changes
	+ Now the user can add rules to INPUT/OUTPUT chain
	+ Use the new services module
0.9.99
	+ New release
0.9.3