@@ -1,3 +1,5 @@
+HEAD
+	+ Add clone() to EBox::Firewall::IptablesRule
 1.3.4
 	+ bugfix: inospoof chain was buggy and didn't allow traffic
 	  to internal eBox addresses from other internal networks
